k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow
  labels:
    kubearmor: enabled
