k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
  labels:
    app: wisecow-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow-app
  template:
    metadata:
      labels:
        app: wisecow-app
    spec:
      containers:
        - name: wisecow-app
          image: sanskrutibagul/wisecow:v1
            #command: ["/bin/bash", "-c", "/code/entrypoint.sh"]
          ports:
            - containerPort: 4499
